# react-native-music-utils

./: .gitignore  CONTRIBUTING.md  LICENSE  MusicUtils.podspec  README.md  package.json  react-native-music-utils.podspec  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/musicutils/: MusicUtilsModule.kt  MusicUtilsPackage.kt
cpp/: react-native-music-utils.cpp  react-native-music-utils.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/musicutils/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/MusicUtilsExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/MusicUtilsExample.xcodeproj/: project.pbxproj
example/ios/MusicUtilsExample.xcodeproj/xcshareddata/xcschemes/: MusicUtilsExample.xcscheme
example/ios/MusicUtilsExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: MusicUtils.h  MusicUtils.mm
src/: NativeMusicUtils.ts  index.tsx
